--- a/src/main/resources/templates/message.html
+++ b/src/main/resources/templates/message.html
@@ -2,7 +2,7 @@
 data-th-if="${session.message}"
 data-th-object="${session.message}"
 data-th-fragment="messagebox"
-data-th-classappend="'text-'+ *{type} + '-800 border border-'+ *{type} + '-300 rounded-lg bg-'+ *{type} + '-50 dark:bg-gray-800 dark:text-blue-400 dark:border-blue-800'"
+data-th-classappend="'text-'+ *{type} + '-800 border border-' + *{type} + '-300 rounded-lg bg-'+ *{type} + '-50 dark:bg-gray-800 dark:text-' + *{type} + '-400 dark:border-' + *{type} + '-800'"
 class="flex items-center p-4 mb-4 text-sm"
 role="alert">
     <svg class="flex-shrink-0 inline w-4 h-4 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
