--- a/src/main/resources/templates/user/addContact.html
+++ b/src/main/resources/templates/user/addContact.html
@@ -151,9 +151,17 @@
                             <div class="mb-2">
 
                                 <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white" for="large_size">Contact Image</label>
-                                <input 
+                                <input
+                                id="image_file_input" 
                                 data-th-field="*{contactImage}"
                                 class="block w-full text-xs text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400" type="file">
+
+                                <!-- preview of selected image -->
+
+                                <img
+                                id="upload_image_preview"
+                                class="max-h-52 mx-auto rounded-lg shadow m-3"
+                                src="" alt="">
 
                             </div>
 
@@ -190,6 +198,9 @@
             </div>
         </div>
     </div>
+
+    <script data-th-src="@{'/js/admin.js'}"></script>
+
     <script>
         console.log("Dashboard page")
     </script>
