Logout success alert message -> logic changed

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -31,10 +31,10 @@
                         Invalid username and password.
                     </div>
 
-                    <div th:if="${param.logout}"
+                    <!-- <div th:if="${param.logout}"
                     class="text-green-500 text-center mb-2">
                         You have been logged out.
-                    </div>
+                    </div> -->
 
                     <!-- Form -->
                     <form
