removed pagination if there is only one page

--- a/src/main/resources/templates/user/contacts.html
+++ b/src/main/resources/templates/user/contacts.html
@@ -10,7 +10,9 @@
             <div data-th-replace="~{user/side_nav::side}"></div>
         </div>
         <div class="sm:pl-64">
-            <div data-th-replace="~{user/contact_fragments/allContacts::contactList}">  </div>
+            <div
+            
+            data-th-replace="~{user/contact_fragments/allContacts::contactList}">  </div>
         </div>
     </div>
     <script>
