--- a/src/main/resources/templates/user/contact_fragments/allContacts.html
+++ b/src/main/resources/templates/user/contact_fragments/allContacts.html
@@ -102,7 +102,9 @@ class="relative overflow-x-auto shadow-md sm:rounded-lg">
         </tbody>
     </table>
     
-    <div class="p-5 text-center bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
+    <div
+    data-th-if="${pageContacts.getTotalPages()}>1"
+    class="p-5 text-center bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
         <div data-th-replace="~{user/contact_fragments/pagination::pagination}">  </div>
     </div>
 </div>
