View contact implemented using Javascript Modal Object(DOM -> Document Object Model)

--- a/src/main/resources/templates/user/search_fragments/searchedContacts.html
+++ b/src/main/resources/templates/user/search_fragments/searchedContacts.html
@@ -94,7 +94,7 @@ data-th-fragment="searchedContacts">
                         <a href=""> <i class="fa-solid fa-user-pen"></i> </a>
 
                         <!-- View -->
-                        <a href=""> <i class="fa-solid fa-eye"></i> </a>
+                        <button data-th-onclick="showContact([[${c}]])"> <i class="fa-solid fa-eye"></i> </button>
                     </div>
                 </td>
             </tr>
