--- a/src/main/resources/templates/user/contact_fragments/allContacts.html
+++ b/src/main/resources/templates/user/contact_fragments/allContacts.html
@@ -95,7 +95,7 @@ class="relative overflow-x-auto shadow-md sm:rounded-lg">
                         <a href=""> <i class="fa-solid fa-user-pen"></i> </a>
 
                         <!-- View -->
-                        <a href=""> <i class="fa-solid fa-eye"></i> </a>
+                        <button data-th-onclick="showContact([[${c}]])"> <i class="fa-solid fa-eye"></i> </button>
                     </div>
                 </td>
             </tr>
