--- a/src/main/resources/templates/user/contacts.html
+++ b/src/main/resources/templates/user/contacts.html
@@ -6,17 +6,28 @@
 <body>
     <div id="content">
         <div data-th-if="${loggedInUser}">
+            <!-- Side Bar -->
             <!-- <div data-th-replace="~{user/side_nav::nav}"></div> -->
             <div data-th-replace="~{user/side_nav::side}"></div>
         </div>
         <div class="sm:pl-64">
-            <div
-            
-            data-th-replace="~{user/contact_fragments/allContacts::contactList}">  </div>
+
+            <!-- All Contacts -->
+            <div data-th-replace="~{user/contact_fragments/allContacts::contactList}">
+            </div>
+
+            <!-- Contact Model -->
+            <div class="p-3">
+                <div data-th-replace="~{user/contact_fragments/contactModal::contact}"></div>
+            </div>
+
         </div>
     </div>
     <script>
         console.log("All Contacts")
     </script>
+
+    <script data-th-src="@{'/JS/contacts.js'}"></script>
+    
 </body>
 </html>
