--- a/src/main/resources/templates/user/contacts/search.html
+++ b/src/main/resources/templates/user/contacts/search.html
@@ -10,14 +10,24 @@
             <div data-th-replace="~{user/side_nav::side}"></div>
         </div>
 
-        <div class="pl-64">
+        <div class="sm:pl-64">
 
+            <!-- searched contacts -->
             <div data-th-replace="~{user/search_fragments/searchedContacts::searchedContacts}">
                 
             </div>
+
+            <!-- Contact Model -->
+            <div class="p-3">
+                <div data-th-replace="~{user/contact_fragments/contactModal::contact}"></div>
+            </div>
+
+        </div>
     </div>
     <script>
         console.log("Searched Contacts")
     </script>
+    
+    <script data-th-src="@{'/JS/contacts.js'}"></script>
 </body>
 </html>
