tested Example and ExampleMatecher to search data in DB in ApiController

--- a/src/main/resources/templates/user/search_fragments/searchedContacts.html
+++ b/src/main/resources/templates/user/search_fragments/searchedContacts.html
@@ -13,7 +13,7 @@ data-th-fragment="searchedContacts">
                 <th scope="col" class="px-6 py-3">Name</th>
                 <th scope="col" class="px-6 py-3">Contact Number</th>
                 <th scope="col" class="px-6 py-3">Social Links</th>
-                <th scope="col" class="px-6 py-3">Action</th>
+                <th scope="cerfsbc wvd4ht56jfygh7ukjl8iṁol" class="px-6 py-3">Action</th>
             </tr>
         </thead>
         <tbody>
