--- a/src/main/resources/templates/user/contact_fragments/allContacts.html
+++ b/src/main/resources/templates/user/contact_fragments/allContacts.html
@@ -92,7 +92,7 @@ class="relative overflow-x-auto shadow-md sm:rounded-lg">
                         <button data-th-onclick="showDeleteModal([[${c.id}]])"> <i class="fa-solid fa-trash"></i> </button>
 
                         <!-- Edit -->
-                        <a href=""> <i class="fa-solid fa-user-pen"></i> </a>
+                        <a data-th-href="@{'/user/contacts/update/' + ${c.id}}"> <i class="fa-solid fa-user-pen"></i> </a>
 
                         <!-- View -->
                         <button data-th-onclick="showContact([[${c}]])"> <i class="fa-solid fa-eye"></i> </button>
